<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userDetailsContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/userDetailsContainerScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textSize="28sp"
                android:text="@string/user_name" />

            <Button
                android:id="@+id/messageUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="22sp"
                android:text="@string/message_user"/>

            <TextView
                android:id="@+id/stickersTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/messageUserButton"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="22sp"
                android:text="@string/this_user_s_stickers" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/stickers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@id/stickersTitle"
                android:scrollbars="vertical"
                android:visibility="visible" />

            <TextView
                android:id="@+id/attendedHackathonsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/stickers"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="22sp"
                android:text="@string/hackathons_attended" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/attendedHackathons"
                android:scrollbars="vertical"
                android:layout_below="@id/attendedHackathonsTitle"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/upcomingHackathonsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/attendedHackathons"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="22sp"
                android:text="@string/hackathons_attended" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/upcomingHackathons"
                android:scrollbars="vertical"
                android:layout_below="@id/upcomingHackathonsTitle"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>